# fteqcdec

./: CMakeLists.txt  qcdec.c
.github/workflows/: ci.yml
